Update WebhookResource.java