@@ -6,7 +6,6 @@ import online.kheops.auth_server.album.AlbumNotFoundException;
 import online.kheops.auth_server.album.UserNotMemberException;
 import online.kheops.auth_server.annotation.*;
 import online.kheops.auth_server.principal.KheopsPrincipal;
-import online.kheops.auth_server.report_provider.ReportProviderUriNotValidException;
 import online.kheops.auth_server.series.SeriesNotFoundException;
 import online.kheops.auth_server.user.UserNotFoundException;
 import online.kheops.auth_server.util.Consts;
@@ -21,9 +20,8 @@ import javax.validation.constraints.NotNull;
 import javax.ws.rs.*;
 import javax.ws.rs.core.*;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Logger;
 
@@ -85,16 +83,15 @@ public class WebhookResource {
             return Response.status(BAD_REQUEST).entity(errorResponse).build();
         }
         try {
-            new URI(url);
-        } catch (URISyntaxException e) {
-            final ErrorResponse errorResponse = new ErrorResponse.ErrorResponseBuilder()
-                    .message(BAD_FORM_PARAMETER)
-                    .detail("'url' not valid")
-                    .build();
-            return Response.status(BAD_REQUEST).entity(errorResponse).build();
-        }
-        try {
-            new URL(url);
+            final List<String> schemes = new ArrayList<>(List.of("http","https"));
+            final String protocol = new URL(url).getProtocol();
+            if (!schemes.contains(protocol)) {
+                final ErrorResponse errorResponse = new ErrorResponse.ErrorResponseBuilder()
+                        .message(BAD_FORM_PARAMETER)
+                        .detail("'url' not valid, the scheme must be 'http' or 'https'")
+                        .build();
+                return Response.status(BAD_REQUEST).entity(errorResponse).build();
+            }
         } catch (MalformedURLException e) {
             final ErrorResponse errorResponse = new ErrorResponse.ErrorResponseBuilder()
                     .message(BAD_FORM_PARAMETER)
